[gd_scene load_steps=19 format=3 uid="uid://6yhsdjs658bw"]

[ext_resource type="Script" uid="uid://bap3rwp3w1rtd" path="res://scripts/main_ui.gd" id="1_j03cv"]
[ext_resource type="Texture2D" uid="uid://bkewnc06n7riy" path="res://assets/square.png" id="5_04ii5"]
[ext_resource type="Texture2D" uid="uid://cdl3s1tdvf5ws" path="res://assets/circle.png" id="6_2dtwi"]
[ext_resource type="Texture2D" uid="uid://x53t3ihwvfnc" path="res://assets/slash.png" id="8_oy4xx"]
[ext_resource type="Texture2D" uid="uid://y61g54udgkih" path="res://assets/attribution-pencil.png" id="9_3soa0"]
[ext_resource type="Texture2D" uid="uid://dmtn2yny37wsx" path="res://assets/triangle (2).png" id="10_u04fh"]
[ext_resource type="Texture2D" uid="uid://bnp204p6yaeh8" path="res://assets/add-image.png" id="10_uqbw1"]
[ext_resource type="Texture2D" uid="uid://bjetncpeahfvl" path="res://assets/eraser.png" id="11_2k2lt"]
[ext_resource type="Texture2D" uid="uid://ctf2505os11ew" path="res://assets/marker.png" id="13_u04fh"]
[ext_resource type="Texture2D" uid="uid://d0jpi3mttqj2r" path="res://assets/minus-small.png" id="13_x0frv"]
[ext_resource type="Texture2D" uid="uid://gj4i2rxsxy8y" path="res://assets/particle (1).png" id="14_ulqfl"]
[ext_resource type="Texture2D" uid="uid://dmng7v75ost36" path="res://assets/plus.png" id="14_xr872"]
[ext_resource type="Texture2D" uid="uid://cluiq5dc3f33g" path="res://assets/undo-alt.png" id="15_dl3nv"]
[ext_resource type="Texture2D" uid="uid://cjm5apelln5x6" path="res://assets/particle.png" id="15_j03cv"]
[ext_resource type="Texture2D" uid="uid://b355jsrl8u1qq" path="res://assets/particle (2).png" id="16_rbpqj"]
[ext_resource type="PackedScene" uid="uid://y2juuwoxenhg" path="res://scenes/color_picker.tscn" id="19_rbpqj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbpqj"]
bg_color = Color(0, 0, 1, 0.352941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hst8y"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="mainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_j03cv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="bottomStrip" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 0

[node name="leftSideControls" type="HBoxContainer" parent="MarginContainer/bottomStrip"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 30

[node name="renderCalls" type="PanelContainer" parent="MarginContainer/bottomStrip/leftSideControls"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/bottomStrip/leftSideControls/renderCalls"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/bottomStrip/leftSideControls/renderCalls/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/bottomStrip/leftSideControls/renderCalls/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Re-render calls : "

[node name="undoRedo" type="PanelContainer" parent="MarginContainer/bottomStrip/leftSideControls"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/bottomStrip/leftSideControls/undoRedo"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/bottomStrip/leftSideControls/undoRedo/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/bottomStrip/leftSideControls/undoRedo/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("15_dl3nv")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButton" type="TextureButton" parent="MarginContainer/bottomStrip/leftSideControls/undoRedo/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("15_dl3nv")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="zoomControls" type="PanelContainer" parent="MarginContainer/bottomStrip/leftSideControls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/bottomStrip/leftSideControls/zoomControls"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/bottomStrip/leftSideControls/zoomControls/MarginContainer"]
layout_mode = 2

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/bottomStrip/leftSideControls/zoomControls/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("13_x0frv")
ignore_texture_size = true
stretch_mode = 5

[node name="zoomLevel" type="Label" parent="MarginContainer/bottomStrip/leftSideControls/zoomControls/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "100 %"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/bottomStrip/leftSideControls/zoomControls/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("14_xr872")
ignore_texture_size = true
stretch_mode = 5

[node name="drawingToolsContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_rbpqj")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/drawingToolsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer/drawingToolsContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BrushTools" type="VBoxContainer" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools"]
layout_mode = 2
text = "Brushes : "

[node name="brushesDropDown" type="OptionButton" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Pencil"
popup/item_0/icon = ExtResource("9_3soa0")
popup/item_0/id = 0
popup/item_1/text = "Highlighter"
popup/item_1/icon = ExtResource("13_u04fh")
popup/item_1/id = 1
popup/item_2/text = "NONE"
popup/item_2/id = 2

[node name="Label4" type="Label" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools"]
layout_mode = 2
text = "Brush Effects :  "

[node name="brushEffectDropDown" type="OptionButton" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools"]
layout_mode = 2
selected = 2
item_count = 5
popup/item_0/text = "Spiky Lines"
popup/item_0/id = 0
popup/item_1/text = "Bad Brush"
popup/item_1/id = 1
popup/item_2/text = "Smooth"
popup/item_2/id = 2
popup/item_3/text = "Ultra-Smooth"
popup/item_3/id = 3
popup/item_4/text = "NONE"
popup/item_4/id = 4

[node name="Label5" type="Label" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools"]
layout_mode = 2
text = "Brush Size :"

[node name="brushSizeSlider" type="HSlider" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools"]
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 5.0

[node name="Label6" type="Label" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools"]
layout_mode = 2
text = "Brush Opacity:"

[node name="brushTransparencySlider" type="HSlider" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
ticks_on_borders = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_hst8y")

[node name="ColorPicker" type="HBoxContainer" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ColorPicker"]
layout_mode = 2
text = "Color : "

[node name="ColorPickerButton" type="TextureButton" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ColorPicker"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ColorPicker/ColorPickerButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_hst8y")

[node name="ShapeTools" type="VBoxContainer" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools"]
layout_mode = 2
text = "Shape : "

[node name="shapesDropDown" type="OptionButton" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools"]
layout_mode = 2
selected = 5
item_count = 6
popup/item_0/text = "Triangle"
popup/item_0/icon = ExtResource("10_u04fh")
popup/item_0/id = 0
popup/item_1/text = "Square"
popup/item_1/icon = ExtResource("5_04ii5")
popup/item_1/id = 1
popup/item_2/text = "Line"
popup/item_2/icon = ExtResource("8_oy4xx")
popup/item_2/id = 2
popup/item_3/text = "Circle"
popup/item_3/icon = ExtResource("6_2dtwi")
popup/item_3/id = 3
popup/item_4/text = "Rectangle"
popup/item_4/icon = ExtResource("5_04ii5")
popup/item_4/id = 4
popup/item_5/text = "NONE"
popup/item_5/id = 5

[node name="Label3" type="Label" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools"]
layout_mode = 2
text = "Shape Effects : "

[node name="shapeEffectDropDown" type="OptionButton" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools"]
layout_mode = 2
selected = 3
item_count = 4
popup/item_0/text = "Sprinkler-1"
popup/item_0/icon = ExtResource("14_ulqfl")
popup/item_0/id = 0
popup/item_1/text = "Sprinkler-2"
popup/item_1/icon = ExtResource("15_j03cv")
popup/item_1/id = 1
popup/item_2/text = "Sprinkler-3"
popup/item_2/icon = ExtResource("16_rbpqj")
popup/item_2/id = 2
popup/item_3/text = "NONE"
popup/item_3/id = 3

[node name="Label2" type="Label" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools"]
layout_mode = 2
text = "Spawn Radius :"

[node name="sppawnRadiusSlider" type="HSlider" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools"]
layout_mode = 2
value = 50.0

[node name="Label4" type="Label" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools"]
layout_mode = 2
text = "Spawn Density :"

[node name="spawnDensitySlider" type="HSlider" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools"]
layout_mode = 2
value = 50.0

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_hst8y")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 3

[node name="TextureButton9" type="TextureButton" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("10_uqbw1")
stretch_mode = 5

[node name="TextureButton10" type="TextureButton" parent="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("11_2k2lt")
stretch_mode = 5

[node name="ColorPickerContainer" parent="." instance=ExtResource("19_rbpqj")]
visible = false
layout_mode = 0

[connection signal="item_selected" from="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools/brushesDropDown" to="." method="_on_brushes_drop_down_item_selected"]
[connection signal="item_selected" from="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools/brushEffectDropDown" to="." method="_on_brush_effect_drop_down_item_selected"]
[connection signal="value_changed" from="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools/brushSizeSlider" to="." method="_on_brush_size_value_changed"]
[connection signal="value_changed" from="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/BrushTools/brushTransparencySlider" to="." method="_on_brush_transparency_value_changed"]
[connection signal="pressed" from="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ColorPicker/ColorPickerButton" to="." method="_on_color_picker_button_pressed"]
[connection signal="item_selected" from="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools/shapesDropDown" to="." method="_on_shapes_drop_down_item_selected"]
[connection signal="item_selected" from="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools/shapeEffectDropDown" to="." method="_on_shape_effect_drop_down_item_selected"]
[connection signal="value_changed" from="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools/sppawnRadiusSlider" to="." method="_on_spawn_radius_value_changed"]
[connection signal="value_changed" from="MarginContainer/drawingToolsContainer/MarginContainer/MainContainer/ShapeTools/spawnDensitySlider" to="." method="_on_spawn_density_value_changed"]
